--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-<h1>Hello World!</h1>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Martyna Wojciechowska Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+
+        #container {
+            display: flex;
+            align-items: center;
+        }
+
+        #image {
+            max-width: 100%;
+            margin-right: 20px;
+        }
+
+        #text {
+            max-width: 600px; /* Adjust the width as needed */
+        }
+    </style>
+</head>
+<body>
+    <div id="container">
+        <img id="image" src="your_image.jpg" >
+        <div id="text">
+            <h2>Your Text Heading</h2>
+            <p>Hi! My name is Martina, I am a 3rd year student at the University Of British Columbia. I am studying Mathematics
+              and my main areas of intests are Probability, Statistics, Number Theory, and Analysis. I am originally from Poland where
+              I graduated high school and where I discovered my love for Math. After I moved to North America, I gradually developed big passion for Computer Science, 
+              especially Data Science! </p>
+        </div>
+    </div>
+</body>
+</html>
