--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <div id="container">
-        <img id="image" src="your_image.jpg" >
+        <img id="image" src="snowboardingup.jpg" >
         <div id="text">
             <h2>Your Text Heading</h2>
             <p>Hi! My name is Martina, I am a 3rd year student at the University Of British Columbia. I am studying Mathematics
