--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 </head>
 <body>
     <div id="container">
-        <img id="image" src="snowboardingup.jpg" >
+        <img id="image" src="https://raw.githubusercontent.com/martina-ewa/your-repo/main/jpgsnowboardingup.jpg" >
         <div id="text">
-            <h2>Your Text Heading</h2>
+            <h2>Martyna Wojciechowska</h2>
             <p>Hi! My name is Martina, I am a 3rd year student at the University Of British Columbia. I am studying Mathematics
               and my main areas of intests are Probability, Statistics, Number Theory, and Analysis. I am originally from Poland where
               I graduated high school and where I discovered my love for Math. After I moved to North America, I gradually developed big passion for Computer Science, 
