--- a/index.html
+++ b/index.html
@@ -4,38 +4,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Martyna Wojciechowska Portfolio</title>
+    <title>Your Website</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
+            margin: 20px 0; /* Adjust top and bottom margin */
         }
 
         #container {
             display: flex;
+            flex-direction: column;
             align-items: center;
+            text-align: center;
+            margin-left: 20px; /* Adjust left margin */
         }
 
         #image {
             max-width: 100%;
-            margin-right: 20px;
+            margin-bottom: 20px;
         }
 
         #text {
-            max-width: 600px; /* Adjust the width as needed */
+            max-width: 600px;
         }
     </style>
 </head>
 <body>
     <div id="container">
-        <img id="image" src="https://raw.githubusercontent.com/martina-ewa/your-repo/main/jpgsnowboardingup.jpg" >
+        <img id="image" src="https://raw.githubusercontent.com/martina-ewa/your-repo/main/jpgsnowboardingup.jpg">
         <div id="text">
             <h2>Martina Wojciechowska</h2>
             <p>Hi! My name is Martina, I am a 3rd year student at the University Of British Columbia. I am studying Mathematics
               and my main areas of intests are Probability, Statistics, Number Theory, and Analysis. I am originally from Poland where
               I graduated high school and where I discovered my love for Math. After I moved to North America, I gradually developed big passion for Computer Science, 
-              especially Data Science! </p>
+              especially Data Science!</p>
         </div>
     </div>
 </body>
 </html>
+
+
+
