--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             display: flex;
             position: fixed;
             top: 0;
-            left: 0;
+            left: 50px;
             height: 100vh;
             width: 250px;
-            background-color: #f0f0f0;
+            background-color: #fff;
             overflow-y: auto; /* Allow vertical scrolling for the left side */
         }
 
@@ -29,7 +29,7 @@
         }
 
         #text {
-            max-width: 200px;
+            max-width: 300px;
             margin: 0 auto;
             text-align: center;
             color: #333;
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div id="container">
-        <img id="image" src="https://raw.githubusercontent.com/martina-ewa/your-repo/main/jpgsnowboardingup.jpg" alt="Martina's Image">
+        <img id="image" src="https://raw.githubusercontent.com/martina-ewa/your-repo/main/snowboardingup.jpg" >
         <div id="text">
             <h2>Martina</h2>
             <p>
@@ -54,7 +54,7 @@
 
     <div id="right-content">
         <h2>Portfolio Projects</h2>
-        <p>Your portfolio content goes here...</p>
+        <p> Content </p>
     </div>
 </body>
 </html>
