--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             position: fixed;
             top: 0;
             left: 50px;
-            height: 100vh;
-            width: 250px;
+            height: 400vh;
+            width: 350px;
             background-color: #fff;
             overflow-y: auto; /* Allow vertical scrolling for the left side */
         }
@@ -31,12 +31,13 @@
         #text {
             max-width: 300px;
             margin: 0 auto;
-            text-align: center;
+            text-align: left;
             color: #333;
+            margin-left: 400px
         }
 
         #right-content {
-            margin-left: 550px;
+            margin-left: 100px;
             padding: 20px;
         }
     </style>
