--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             position: fixed;
             top: 0;
             left: 50px;
-            height: 400vh;
-            width: 350px;
+            height: 100vh; /* Adjusted height to fit the viewport */
+            width: 400px; /* Adjusted width for better display */
             background-color: #fff;
             overflow-y: auto; /* Allow vertical scrolling for the left side */
         }
@@ -33,22 +33,22 @@
             margin: 0 auto;
             text-align: left;
             color: #333;
-            margin-left: 400px
+            margin-left: 20px; /* Adjusted margin-left for proper alignment */
         }
 
         #right-content {
-            margin-left: 100px;
+            margin-left: 450px; /* Adjusted margin-left for proper separation */
             padding: 20px;
         }
     </style>
 </head>
 <body>
     <div id="container">
-    <img id="image" src="https://raw.githubusercontent.com/martina-ewa/your-repo/main/jpgsnowboardingup.jpg" >
+        <img id="image" src="https://raw.githubusercontent.com/martina-ewa/your-repo/main/jpgsnowboardingup.jpg">
         <div id="text">
             <h2>Martina</h2>
             <p>
-                I am a 3rd year student. I am studying Mathematics and my main areas of interest are Probability, Statistics, Number Theory, and Analysis. I am originally from Poland where I graduated high school and discovered my love for Math. After I moved to North America, I gradually developed a big passion for Computer Science, especially Data Science.
+                I am a 3rd year student. I am studying Mathematics, and my main areas of interest are Probability, Statistics, Number Theory, and Analysis. I am originally from Poland where I graduated high school and discovered my love for Math. After I moved to Canada, I developed a big passion for Computer Science, especially Data Science.
             </p>
         </div>
     </div>
@@ -59,3 +59,4 @@
     </div>
 </body>
 </html>
+
