--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         #container {
             display: flex;
             position: fixed;
-            top: 400;
-            left: 50px;
+            top: 700px;
+            left: 400px;
             height: 100vh; /* Adjusted height to fit the viewport */
             width: 400px; /* Adjusted width for better display */
             background-color: #fff;
