--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Put your HTML text here<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -26,7 +26,6 @@ Put your HTML text here<!DOCTYPE html>
         #image {
             max-width: 100%;
             margin-bottom: 40px;
-            top: 100px;
         }
 
         #text {
@@ -98,4 +97,3 @@ Put your HTML text here<!DOCTYPE html>
     
 </body>
 </html>
-
