--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Martina's Portfolio</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
             overflow-x: hidden;
@@ -25,7 +25,7 @@
 
         #image {
             max-width: 100%;
-            margin-bottom: 40px;
+            
         }
 
         #text {
@@ -34,6 +34,9 @@
             text-align: left;
             color: #333;
             margin-left: 20px; /* Adjusted margin-left for proper alignment */
+            font-family: 'Roboto', sans-serif; 
+            font-size: 15px;
+        
         }
 
         #right-content {
@@ -49,6 +52,8 @@
             height: 100vh; /* Adjusted height to fit the viewport */
             width: 400px; /* Adjusted width for better display */
             background-color: #fff;
+            font-family: 'Roboto', sans-serif; 
+
         }
         #container3 {
             display: flex;
@@ -58,6 +63,8 @@
             height: 100vh; /* Adjusted height to fit the viewport */
             width: 400px; /* Adjusted width for better display */
             background-color: #fff;
+            font-family: 'Roboto', sans-serif; 
+
         }
     </style>
 </head>
@@ -67,7 +74,7 @@
         <div id="text">
             <h2>Martina  W</h2>
             <p>
-                I am a 3rd year student. I am studying Mathematics, and my main areas of interest are Probability, Statistics, Number Theory, and Analysis. I am originally from Poland where I graduated high school and discovered my love for Math. After I moved to Canada, I developed a big passion for Computer Science, especially Data Science.
+                I am a 3rd year student (..). I am studying Mathematics, and my main areas of interest are Probability, Statistics, Number Theory, and Analysis. I am originally from Poland where I graduated high school and discovered my love for Math. After I moved to Canada, I developed a big passion for Computer Science, especially Data Science.
             </p>
         </div>
     </div>
@@ -86,9 +93,9 @@
     </div>
     <div id="container3">
         <div id="text">
-            <h2>Project 2 Title</h2>
+            <h2>Swinging Succes: Unveiling Tennis Players Careers with Machine Learning </h2>
             <p>
-               Project Description number 1
+               Numbers are an inseperable part of sports, including Tennis. Given the Dataset 
             </p>
         </div>
     </div>
