--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
         
         <div class="image-container">
-        <img src="Picture.jpg" >
+        <img src="martina-ewa.github.io/Picture.jpg" >
         
          </div>
 
