--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         
         #image-container {
         text-align: center;
-        top: 20px; /* Adjust the top position */
-        right: 20px; 
+        top: 70px; 
+        right: 70px; 
          }
 
         #text {
