--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
         }
 
         #image {
-            max-width: 20%;
-            max-height: 20%
+            max-width: 12%;
+            max-height: 12%
         }
         
         #image-container {
         text-align: center;
         top: 100px; 
-        right: 100px; 
+        left: 100px; 
          }
 
         #text {
