--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         text-align: center;
         top: 100px; 
         left: 200px; 
+         position: fixed; /* Add this line */
+    
          }
 
         #text {
