--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         #image-container {
         text-align: center;
         top: 100px; 
-        left: 200px; 
+        right: 20px; 
          position: fixed; /* Add this line */
     
          }
