--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
         }
         
         #image-container {
-        text-align: center;
         top: 100px; 
         right: 20px; 
-         position: fixed; /* Add this line */
+        position: fixed; 
     
          }
 
@@ -148,7 +147,7 @@
                 Technology Used: Python, JupyterNotebook, KMeans, Seaborn and Matplotlib, Scikit-learn                
                 </p>
                 <p>
-                 Review the code on GitHub <a href="about.html">Code</a>.
+                 Review the code on GitHub <a href="about.html">Here</a>.
                 </p>
             </div>
         </div>
@@ -164,7 +163,7 @@
                 Technology Used: Python, JupyterNotebook, KMeans, Seaborn and Matplotlib, Scikit-learn                
                 </p>
                  <p>
-                 Review the code on GitHub <a href="about.html">Code</a>.
+                 Review the code on GitHub <a href="about.html">Here</a>.
                  </p>
             </div>
         </div>
