--- a/index.html
+++ b/index.html
@@ -96,17 +96,20 @@
 
         <div id="container">
             <div id="text">
-                <h2>Martina W</h2>
+                <h2>Martina Wojciechowska</h2>
                 <p>
-                    I am a 3rd year student (..). I am studying Mathematics, and my main areas of interest are Probability, Statistics, Number Theory, and Analysis. I am originally from Poland where I graduated high school and discovered my love for Math. After I moved to
-                    Canada, I developed a big passion for Computer Science, especially Data Science. 
+                    I am a third-year year Mathematics student at the University Of British Columbia in Vancouver. 
+                    My main areas of interest are Probability, Statistics, Number Theory, and Analysis. Originally I am from a small town in southern Poland
+                    where I graduated high school and where I discovered my love for Math. After I moved to
+                    Canada, I my interest expanded to Computer Science, and I am not cultivating my passion in Data Science.
+                    I am dedicated to pursuing excellence in the intersection of mathematical theory and practical applications.
                 </p>
                 <p>
 
 
                 </p>
                 <p>
-                    Privately I love sports, travelling (Amsterdam, I see you!) and lately I have grown a big passion and appreciation for wines.
+                   Outside of the world of numbers, I love sports, travelling (Amsterdam, I see you!) and lately I have grown a big passion and appreciation for wines.
                 </p>
                 
                 
