--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                     I am a third-year year Mathematics student at the University Of British Columbia in Vancouver. 
                     My main areas of interest are Probability, Statistics, Number Theory, and Analysis. Originally I am from a small town in southern Poland
                     where I graduated high school and where I discovered my love for Math. After I moved to
-                    Canada, I my interest expanded to Computer Science, and I am not cultivating my passion in Data Science.
-                    I am dedicated to pursuing excellence in the intersection of mathematical theory and practical applications.
+                    Canada, my interest expanded to Computer Science, and I am now cultivating my passion in Data Science.
+                    In the future pursuits, I am interested intersection of mathematical theory and practical applications.
                 </p>
                 <p>
 
