--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 Technology Used: Python, JupyterNotebook, KMeans, Seaborn and Matplotlib, Scikit-learn                
                 </p>
                 <p>
-                 Review the code on GitHub <a href="about.html">Here</a>.
+                 Review the code on GitHub <a href="https://github.com/Martina-Ewa/Project1_Wines/blob/main/project_2%20(1).ipynb">Here</a>.
                 </p>
             </div>
         </div>
@@ -168,7 +168,7 @@
                 Technology Used: Python, JupyterNotebook, KMeans, Seaborn and Matplotlib, Scikit-learn                
                 </p>
                  <p>
-                 Review the code on GitHub <a href="about.html">Here</a>.
+                 Review the code on GitHub <a href="https://github.com/Martina-Ewa/Project2_Tennis/blob/main/prject_nr_1%20(4).ipynb">Here</a>.
                  </p>
             </div>
         </div>
