--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
             <div id="text">
                 <h2>Analysis and Clustering of Spanish Wines</h2>
                 <p>
-                    Beautiful country located on the Iberian Peninsula- Spain is worldly known for its wineries and excellent wines. In this project, I applied Analytics, Visualizations, and a Clustering Model to better understand the wine story that began thousands of years
+                   A beautiful country located on the Iberian Peninsula- Spain is worldly known for its wineries and excellent wines. 
+                    In this project, I applied Data Analysis, visualizations tools, and a Clustering Model to better understand the wine story that began thousands of years
                     ago. 
                 </p>
                 
@@ -166,7 +167,7 @@
         <div id="container3">
             <div id="text">
                 <h2>Swinging Success: Unveiling Tennis Players Careers with Machine Learning </h2>
-                <p> Tennis is one fo the most prestige and popular sports out there, usually with big awards involved for top world players. I worked with a dataset to visualize, 
+                <p> Tennis is one fo the most prestige and popular sports out there, usually with big prizes involved for top world players. I worked with a dataset to visualize, 
                     understand and predict a potential success of a player. 
                 </p>
                 
