--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         
                 </p>
                     Originally I am from a small town in southern Poland
-                    where I graduated high school and where I discovered my love for Math. After I moved to
+                    where I graduated high school and where I developed my love for Math. After I moved to
                     Canada, my interest expanded to Computer Science, and I am now cultivating my passion in Data Science.
                     In the future pursuits, I am interested in intersection of mathematical theory and practical applications.
                 
