--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 Technology Used: Python, JupyterNotebook, KMeans, Seaborn and Matplotlib, Scikit-learn                
                 </p>
                  <p>
-                 Review the code on GitHub <a href="hhttps://github.com/Martina-Ewa/Project2_Tennis/tree/main">Here</a>.
+                 Review the code on GitHub <a href="https://github.com/Martina-Ewa/Project2_Tennis">Here</a>.
                  </p>
             </div>
         </div>
