--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 Technology Used: Python, JupyterNotebook, KMeans, Seaborn and Matplotlib, Scikit-learn                
                 </p>
                 <p>
-                 Review the code on GitHub <a href="https://github.com/Martina-Ewa/Project1_Wines/blob/main/project_2%20(1).ipynb">Here</a>.
+                 Review the code on GitHub <a href="https://github.com/Martina-Ewa/Project1_Wines">Here</a>.
                 </p>
             </div>
         </div>
