--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 </p>
                 
                 <p>
-                Technology Used: Python, JupyterNotebook, KMeans, Seaborn and Matplotlib, Scikit-learn                
+                Technology Used: Python, JupyterNotebook, Seaborn and Matplotlib, Scikit-learn                
                 </p>
                 <p>
                  Review the code on GitHub <a href="https://github.com/Martina-Ewa/Project1_Wines">Here</a>.
