--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 </p>
                 
                 <p>
-                   Outside of the world of numbers, I love sports, travelling (Amsterdam, I see you!) and lately I have grown a  passion and appreciation for wines.
+                   Outside of the world of numbers, I love sports and I am a member of the Boxing Club at UBC, I love travelling (Amsterdam, I see you!) and lately I have grown a passion and appreciation for wines.
                 </p>
                 
                 <p>
