--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 </p>
                 
                 <p>
-                Technology Used: Python, JupyterNotebook, Seaborn and Matplotlib, Scikit-learn                
+                Technology Used: Python, JupyterNotebook, Seaborn and Matplotlib,KMeans, Scikit-learn                
                 </p>
                 <p>
                  Review the code on GitHub <a href="https://github.com/Martina-Ewa/Project1_Wines">Here</a>.
@@ -174,7 +174,7 @@
                 </p>
                 
                 <p>
-                Technology Used: Python, JupyterNotebook, KMeans, Seaborn and Matplotlib, Scikit-learn                
+                Technology Used: Python, JupyterNotebook, K-Nearest Neighbors Model (KNN), Linear Regression, Altair, Scikit-learn                
                 </p>
                  <p>
                  Review the code on GitHub <a href="https://github.com/Martina-Ewa/Project2_Tennis">Here</a>.
