--- a/index.html
+++ b/index.html
@@ -6,72 +6,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Martina's Portfolio</title>
     <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            color: #333;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            background-color: #f4f4f4;
-        }
+       body {
+    font-family: 'Roboto', sans-serif;
+    color: #333;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    background-color: #f4f4f4;
+}
 
-        #left-column {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 250px;
-            height: 100vh;
-            background-color: #fff;
-            padding: 20px;
-            box-shadow: 2px 0 5px rgba(0,0,0,0.1);
-            overflow: auto;
-        }
+#left-column {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 40%; /* Adjusted to take 40% of the viewport width */
+    height: 100vh;
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+    overflow: auto;
+}
 
-        #profile {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
+#profile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
-        #image {
-            max-width: 150px;
-            margin-bottom: 20px;
-        }
+#image {
+    max-width: 150px;
+    margin-bottom: 20px;
+}
 
-        #text {
-            text-align: left;
-        }
+#text {
+    text-align: left;
+}
 
-        h2 {
-            margin: 0 0 10px 0;
-        }
+h2 {
+    margin: 0 0 10px 0;
+}
 
-        #right-column {
-            margin-left: 270px; /* Add some space for the fixed left column */
-            padding: 20px;
-            width: calc(100% - 270px);
-            box-sizing: border-box;
-        }
+#right-column {
+    margin-left: 40%; /* Adjusted to align with the end of the left column */
+    padding: 20px;
+    width: 60%; /* Adjusted to take 60% of the viewport width */
+    box-sizing: border-box;
+}
 
-        .project {
-            background-color: #fff;
-            padding: 20px;
-            margin-bottom: 20px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
+.project {
+    background-color: #fff;
+    padding: 20px;
+    margin-bottom: 20px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
 
-        .project h2 {
-            margin-top: 0;
-        }
+.project h2 {
+    margin-top: 0;
+}
 
-        a {
-            color: #0073b1;
-            text-decoration: none;
-        }
+a {
+    color: #0073b1;
+    text-decoration: none;
+}
 
-        a:hover {
-            text-decoration: underline;
-        }
+a:hover {
+    text-decoration: underline;
+}
+
     </style>
 </head>
 
