--- a/index.html
+++ b/index.html
@@ -4,75 +4,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Martina's Portfolio</title>
     <style>
-       body {
-    font-family: 'Roboto', sans-serif;
-    color: #333;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    background-color: #f4f4f4;
-}
+        body {
+            font-family: 'Roboto', sans-serif;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            background-color: #f4f4f4;
+        }
 
-#left-column {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 40%; /* Adjusted to take 40% of the viewport width */
-    height: 100vh;
-    background-color: #fff;
-    padding: 20px;
-    box-shadow: 2px 0 5px rgba(0,0,0,0.1);
-    overflow: auto;
-}
+        #left-column {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 40%; /* Adjusted to take 40% of the viewport width */
+            height: 100vh;
+            background-color: #fff;
+            padding: 20px;
+            box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+            overflow: auto;
+        }
 
-#profile {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+        #profile {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
 
-#image {
-    max-width: 150px;
-    margin-bottom: 20px;
-}
+        #image {
+            max-width: 150px;
+            margin-bottom: 20px;
+        }
 
-#text {
-    text-align: left;
-}
+        #text {
+            text-align: left;
+        }
 
-h2 {
-    margin: 0 0 10px 0;
-}
+        h2 {
+            margin: 0 0 10px 0;
+        }
 
-#right-column {
-    margin-left: 40%; /* Adjusted to align with the end of the left column */
-    padding: 20px;
-    width: 60%; /* Adjusted to take 60% of the viewport width */
-    box-sizing: border-box;
-}
+        #right-column {
+            margin-left: 40%; /* Adjusted to align with the end of the left column */
+            padding: 20px;
+            width: 60%; /* Adjusted to take 60% of the viewport width */
+            box-sizing: border-box;
+            overflow-y: auto; /* Added scrolling for overflow */
+            height: 100vh; /* Added to maintain full viewport height */
+        }
 
-.project {
-    background-color: #fff;
-    padding: 20px;
-    margin-bottom: 20px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-}
+        .project {
+            background-color: #fff;
+            padding: 20px;
+            margin-bottom: 20px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
 
-.project h2 {
-    margin-top: 0;
-}
+        .project h2 {
+            margin-top: 0;
+        }
 
-a {
-    color: #0073b1;
-    text-decoration: none;
-}
+        a {
+            color: #0073b1;
+            text-decoration: none;
+        }
 
-a:hover {
-    text-decoration: underline;
-}
-
+        a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 
@@ -104,6 +106,19 @@ a:hover {
         <h2>Portfolio Projects</h2>
 
         <div class="project">
+            <h2>NLP Sentiment Analysis</h2>
+            <p>
+                In this project, I performed sentiment analysis on text data to classify sentiment as positive or negative. I used natural language processing techniques and machine learning algorithms to build and evaluate the sentiment analysis model.
+            </p>
+            <p>
+                Technology Used: Python, JupyterNotebook, NLTK, Scikit-learn, Pandas
+            </p>
+            <p>
+                Review the code on GitHub <a href="#">Here</a>. <!-- Replace with your GitHub link -->
+            </p>
+        </div>
+
+        <div class="project">
             <h2>Analysis and Clustering of Spanish Wines</h2>
             <p>
                 A beautiful country located on the Iberian Peninsula- Spain is worldly known for its wineries and excellent wines. 
@@ -127,19 +142,6 @@ a:hover {
             </p>
             <p>
                 Review the code on GitHub <a href="https://github.com/Martina-Ewa/Project2_Tennis">Here</a>.
-            </p>
-        </div>
-
-        <div class="project">
-            <h2>Text Sentiment Analysis of Movie Reviews</h2>
-            <p>
-                In this project, I performed sentiment analysis on movie reviews to classify them as positive or negative. I utilized natural language processing techniques and machine learning algorithms to build the model.
-            </p>
-            <p>
-                Technology Used: Python, JupyterNotebook, NLTK, Scikit-learn, Pandas
-            </p>
-            <p>
-                Review the code on GitHub <a href="https://github.com/Martina-Ewa/Project3_MovieReviews">Here</a>.
             </p>
         </div>
     </div>
