--- a/index.html
+++ b/index.html
@@ -7,74 +7,80 @@
     
     <title>Martina's Portfolio</title>
     <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            color: #333;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            background-color: #f4f4f4;
-        }
+       body {
+    font-family: 'Roboto', sans-serif;
+    color: #333;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    background-color: #f4f4f4;
+}
 
-        #left-column {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 40%; /* Adjusted to take 40% of the viewport width */
-            height: 100vh;
-            background-color: #fff;
-            padding: 20px;
-            box-shadow: 2px 0 5px rgba(0,0,0,0.1);
-            overflow: auto;
-        }
+#left-column {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 40%; /* Adjusted to take 40% of the viewport width */
+    height: 100vh;
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+    overflow: auto;
+    font-size: 14px;
+}
 
-        #profile {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
+#profile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
-        #image {
-            max-width: 150px;
-            margin-bottom: 20px;
-        }
+#image {
+    max-width: 150px;
+    margin-bottom: 20px;
+}
 
-        #text {
-            text-align: left;
-        }
+#text {
+    text-align: left;
+}
 
-        h2 {
-            margin: 0 0 10px 0;
-        }
+h2 {
+    margin: 0 0 10px 0;
+}
 
-        #right-column {
-            margin-left: 55%; /* Adjusted to align with the end of the left column */
-            padding: 20px;
-            width: 60%; /* Adjusted to take 60% of the viewport width */
-            box-sizing: border-box;
-            overflow-y: auto; /* Added scrolling for overflow */
-            height: 100vh; /* Added to maintain full viewport height */
-        }
+#right-column {
+    margin-left: 45%; /* Adjusted to align with the end of the left column */
+    padding: 20px;
+    width: 60%; /* Adjusted to take 60% of the viewport width */
+    box-sizing: border-box;
+    overflow-y: auto; /* Added scrolling for overflow */
+    height: 100vh; /* Added to maintain full viewport height */
+}
 
-        .project {
-            background-color: #fff;
-            padding: 20px;
-            margin-bottom: 20px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
+.project {
+    background-color: #fff;
+    padding: 20px;
+    margin-bottom: 20px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
 
-        .project h2 {
-            margin-top: 0;
-        }
+.project h2 {
+    margin-top: 0;
+}
 
-        a {
-            color: #0073b1;
-            text-decoration: none;
-        }
+.project p {
+    text-align: justify; /* Adjusted text alignment to justify */
+}
 
-        a:hover {
-            text-decoration: underline;
-        }
+a {
+    color: #0073b1;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
     </style>
 </head>
 
