--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 40%; /* Adjusted to take 40% of the viewport width */
+    width: 35%; /* Adjusted to take 40% of the viewport width */
     height: 100vh;
     background-color: #fff;
     padding: 20px;
@@ -60,7 +60,7 @@ h2 {
 .project {
     background-color: #fff;
     padding: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
@@ -70,6 +70,7 @@ h2 {
 
 .project p {
     text-align: justify; /* Adjusted text alignment to justify */
+    font-size: 14px;
 }
 
 a {
