--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@ a:hover {
                 <h2>Martina Wojciechowska</h2>
                 <p>
                     I am a third-year Mathematics student at the University Of British Columbia in Vancouver. 
-                    My main areas of interest are Probability, Statistics, Number Theory, and Analysis.
+                    My main areas of interest are Data Analysis and Machine Learnign.
                 </p>
                 <p>
                     Originally I am from a small town in southern Poland where I graduated high school and where I developed my love for Math. After I moved to Canada, my interest expanded to Computer Science, and I am now cultivating my passion in Data Science.
                     In future pursuits, I am interested in the intersection of mathematical theory and practical applications.
                 </p>
                 <p>
-                    Outside of the world of numbers, I am a member of the Boxing Club at UBC, I love traveling (Amsterdam, I see you!) and lately, I have grown a passion and appreciation for wines.
+                    Outside of the world of numbers, I am a member of the Boxing Club at UBC, I love traveling and my goal is to go on a cycling road trip through Europe, and lately, I have grown a passion and appreciation for wines.
                 </p>
                 <p>
                     LinkedIn Profile <a href="https://www.linkedin.com/in/martina-ewa/">Here</a>.
@@ -113,12 +113,14 @@ a:hover {
         <h2>Portfolio Projects</h2>
 
         <div class="project">
-            <h2>NLP Sentiment Analysis</h2>
+            <h2> What did they really mean: Sentiment Analysis of Tweets</h2>
             <p>
-                In this project, I performed sentiment analysis on text data to classify sentiment as positive or negative. I used natural language processing techniques and machine learning algorithms to build and evaluate the sentiment analysis model.
-            </p>
+                This data science project focuses on developing a robust model for analyzing tweets and accurately
+                assigning sentiment labels. By employing advanced NLP methods, we aim to transform raw tweet data into
+                valuable insights, enhancing our understanding of public opinion and trends.
+                /p>
             <p>
-                Technology Used: Python, JupyterNotebook, NLTK, Scikit-learn, Pandas
+                Technology Used: Python, JupyterNotebook, NLTK, Scikit-learn, Pandas, SVM, UpSet Plots
             </p>
             <p>
                 Review the code on GitHub <a href="#">Here</a>. <!-- Replace with your GitHub link -->
