--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ a:hover {
                 Technology Used: Python, JupyterNotebook, NLTK, Scikit-learn, Pandas, SVM, UpSet Plots
             </p>
             <p>
-                Review the code on GitHub <a href="#">Here</a>. <!-- Replace with your GitHub link -->
+                Review the code on GitHub <a href="#">Here</a>. <https://github.com/Martina-Ewa/Project3_NLP_Tweets_Analysis>
             </p>
         </div>
 
