--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@ a:hover {
                 <h2>Martina Wojciechowska</h2>
                 <p>
                     I am a third-year Mathematics student at the University Of British Columbia in Vancouver. 
-                    My main areas of interest are Data Analysis and Machine Learnign.
+                    My main areas of interest are Data Science/Analysis and Machine Learning.
                 </p>
                 <p>
                     Originally I am from a small town in southern Poland where I graduated high school and where I developed my love for Math. After I moved to Canada, my interest expanded to Computer Science, and I am now cultivating my passion in Data Science.
                     In future pursuits, I am interested in the intersection of mathematical theory and practical applications.
                 </p>
                 <p>
-                    Outside of the world of numbers, I am a member of the Boxing Club at UBC, I love traveling and my goal is to go on a cycling road trip through Europe, and lately, I have grown a passion and appreciation for wines.
+                    Outside of the world of numbers, I am a member of the Boxing Club at UBC, I love traveling and my goal is to go on a cycling road trip through Europe. Lately, I have grown a passion and appreciation for wines.
                 </p>
                 <p>
                     LinkedIn Profile <a href="https://www.linkedin.com/in/martina-ewa/">Here</a>.
